# weather-statusbar

./: Cargo.toml
src/: main.rs
